--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
                 <div class="game-out">
                     <div class="game" id="game">
                     </div>
-                    <div class="mines-counter">
-                        <img src="images/mine.png" alt="" class="mines-counter__left">
-                        <div class="mines-counter__counter"></div>
-                    </div>
-                    <div class="time-counter">
-                        <img src="images/clock.png" alt="" class="time-counter__left">
-                        <div class="time-counter__counter">00:00</div>
+                    <div class="game-botton">
+                        <div class="mines-counter">
+                            <img src="images/mine.png" alt="" class="mines-counter__left">
+                            <div class="mines-counter__counter"></div>
+                        </div>
+                        <input type="text" class="inputer">
+                        <div class="time-counter">
+                            <img src="images/clock.png" alt="" class="time-counter__left">
+                            <div class="time-counter__counter">00:00</div>
+                        </div>
                     </div>
                 </div>
             </main>
